--- a/blog-app/frontend/src/components/BlogItemText/index.css
+++ b/blog-app/frontend/src/components/BlogItemText/index.css
@@ -11,3 +11,14 @@
     background: #6941c6;
     border-radius: 50%;
 }
+
+.dark-mode .date-author-text {
+    background: #000;
+    /* color: #fff; */
+}
+
+.dark-mode .snippet{
+    /* background: #f5eded; */
+    color: #ffffff;
+
+}
